# StringToMilliseconds

./: LICENSE  README.md  pyproject.toml
string_to_ms/: StringToMs.py  __init__.py  ms.py  pyproject.toml
