[project]
name = "string_to_ms"
version = "0.0.1"
authors = [
  { name="chickenman34234"},
]
description = "A small example package"
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
license = "MIT"
license-files = ["LICEN[CS]E*"]


[build-system]
requires = ["hatchling >= 1.26"]
build-backend = "hatchling.build"